<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunityFragment">


    <LinearLayout
        android:id="@+id/containerCommunity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/round_blue_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- drawbleStart로 drawable 넣어보기 -->

        <Button
            android:id="@+id/buttonMyPost"
            android:background="@color/white"
            android:text="@string/my_post"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp" />

        <Button
            android:id="@+id/buttonBookmark"
            android:background="@color/white"
            android:text="@string/bookmark"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonTemporary"
            android:background="@color/white"
            android:text="@string/temporary_post"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerCommunity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_blue_edge"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerCommunity1">

        <Button
            android:id="@+id/buttonNotice"
            android:background="@color/white"
            android:text="@string/notice"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonPopular"
            android:background="@color/white"
            android:text="@string/polular"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonFree"
            android:background="@color/white"
            android:text="@string/free"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonQnA"
            android:text="@string/qna"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerCommunity3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_blue_edge"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerCommunity2">

        <Button
            android:id="@+id/buttonCommunity1"
            android:text="기타1"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonCommunity2"
            android:text="기타2"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonCommunity3"
            android:text="기타3"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonCommunity4"
            android:text="기타4"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/buttonCommunity5"
            android:text="기타5"
            android:background="@color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:drawableStart="@drawable/ic_baseline_directions_boat_24"
            android:drawablePadding="20dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>